[package]
name = "zip-extensions"
version = "0.6.2"
authors = ["Matthias Friedrich <rushiblegit@gmail.com>"]
edition = "2021"
exclude = [
  "**/*.yml",
  "**/*.json",
  ".gitignore",
]
keywords = ["zip", "archive"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/matzefriedrich/zip-extensions-rs"
description = "An extension crate for zip."

[dependencies]
zip = { version = "*", default-features = false }
